Changes in Version 0.1.6 (2015-xx-xx)
=====================================
pycdf
 - On OSX, search more paths for the CDF library
 - CDF.clone() now returns the new variable
 - Fix re-import after failure to find the CDF library, can now try the import
   again without restarting the Python intepreter
 - Fix some comparisons that might cause problems with future versions of numpy
 - Log the path to the CDF library for debugging purposes

Changes in Version 0.1.5 (2014-12-23)
=====================================
- Python 3 support
- documentation updates across many packages
- installer should work better w/pip
- minor bugfixes throughout
datamodel
 - fromHDF5 now reads most netCDF4 and MatLab (v7.3+; r2011b onward) save files
 - add function dmfilled: create a filled dmarray with any given fill value
 - updates to toCDF to allow/use NRV variables
irbempy
 - add function find_footpoint: traces field line from given location to 
   specified altitude
 - add functions find_LCDS and find_LCDS_K to find the last closed drift shell
   at given pitch angle or given second invariant K
 - add function AlphaOfK to find the equatorial pitch angle for a specified
   second invariant K
omni
 - get_omni updated to also read from daily JSON-headed ASCII files in
   custom databases
plot
 - new functions in utils:
   - add_logo: put an image in one corner of a figure
   - annotate_xaxis: add text in line with x tickmarks
   - collapse_vertical: remove space between two subplots
   - shared_ylabel: span a y-axis label across subplots
   - show_used: draw boxes to show the space taken by each plot element
pycdf
 - fix bug with interpreting indexes with ellipses (var[..., 0] gave the
   wrong result).
 - epoch16_to_epoch: round sub-milliseconds rather than truncate.
 - sped up indexing in variable copies
 - improved handling of numpy fancy indexing in variable copies
   (fancy indexing is still not supported for variables themselves.)
 - make assignment to attrs work